# tpRigToolkit-libs-ziva

./: .gitmodules  .travis.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
tests/: test_general.py
tpRigToolkit/libs/: __init__.py
tpRigToolkit/libs/ziva/: __init__.py  __logging__.ini  __version__.py  _version.py
tpRigToolkit/libs/ziva/core/: bone.py  consts.py  lib.py  tissue.py  utils.py
tpRigToolkit/libs/ziva/data/: zivarig.py
tpRigToolkit/libs/ziva/scripts/ziva-vfx-utils/: __version__.txt
