[metadata]
name = tpRigToolkit-libs-ziva
description = Library that contains utils functions and classes for Ziva
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: tpRigToolkit.libs.ziva.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpRigToolkit/tpRigToolkit-libs-ziva

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    Qt.py
    tpDcc-core

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = tpRigToolkit/libs/ziva/_version.py
versionfile_build = tpRigToolkit/libs/ziva/_version.py
tag_prefix =
parentdir_prefix =